@@ -2,18 +2,14 @@
 "Crystal Crusader" is all about creating your own hero, taking on enemies,finding unique items and diving into a world where crystals are powerful artifacts. If you're into strategic fights and stories where your choices matter, this is the game for you.
 (we can add the relevant screenshot here later).
 
-![This is a screenshot.](images.png)
-# How to run 
+![This is a screenshot.](MainPage.png)
+# How to run (IntelliJ IDEA)
 - Download the latest binary from the Release section on the right on GitHub.  
-- On the command line uncompress using
-```
-tar -xzf  
-```
-- On the command line run with
-```
-./CrystalCrusader 
-```
-- You will see the game start. 
+- Open https://gluonhq.com/products/javafx/, download the JavaFX SDK and unzip it to a location on your computer. (Also unzip lib folder from the zip file if necessary)
+- Open the project in IntelliJ IDEA and go to File -> Project Structure -> Libraries. Click on the + sign and add the path to the lib folder in the JavaFX SDK folder. Click Apply and then OK.
+- Go to Run -> Edit Configurations. Click on the + sign and add a new Application configuration. Set the Main class to be Main and set the VM options to --module-path "path to JavaFX lib folder" --add-modules javafx.controls,javafx.fxml. Click Apply and then OK.(Remember to replace "path to JavaFX lib folder" with the actual path to the lib folder in the JavaFX SDK folder)
+- Run the MainUserInterface class.
+
 
 # How to contribute
 Follow this project board to know the latest status of the project: https://github.com/orgs/cis3296s24/projects/80
